--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,10 +47,12 @@ jobs:
         os: [ubuntu-latest, windows-latest]
 
     steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
+      - uses: nodejs/web-team/actions/setup-environment@4fe2167f55e4aa670f7f97da16490945bb061d51
         with:
-          egress-policy: audit
+          pnpm: true
+          use-version-file: true
+          # We only want to install required production packages
+          install-flags: --prod
 
       - name: Use GNU tar instead BSD tar
         # This ensures that we use GNU `tar` which is more efficient for extracting caches's
@@ -58,37 +60,11 @@ jobs:
         shell: cmd
         run: echo C:\Program Files\Git\usr\bin>>"%GITHUB_PATH%"
 
-      - name: Git Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          # Provides the Pull Request commit SHA or the GitHub merge group ref
-          ref: ${{ github.event_name == 'pull_request_target' && github.event.pull_request.head.sha || github.ref }}
-          # We only need to fetch the last commit from the head_ref
-          # since we're not using the `--filter` operation from turborepo
-          # We don't use the `--filter` as we always want to force builds regardless of having changes or not
-          # this ensures that our bundle analysis script always runs and that we always ensure next.js is building
-          # regardless of having code changes or not
-          fetch-depth: 1
-
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: ${{ github.workspace }}/apps/site/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
           restore-keys: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
-
-      - name: Set up pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-
-      - name: Set up Node.js
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
-        with:
-          # We want to ensure that the Node.js version running here respects our supported versions
-          node-version-file: '.nvmrc'
-          cache: 'pnpm'
-
-      - name: Install packages
-        # We only want to install required production packages
-        run: pnpm install --prod --frozen-lockfile
 
       - name: Build Next.js (ISR)
         # We want a ISR build on CI to ensure that regular Next.js builds work as expected.
