--- a/.github/workflows/translations-sync.yml
+++ b/.github/workflows/translations-sync.yml
@@ -65,14 +65,10 @@ jobs:
       contents: write
 
     steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@6c439dc8bdf85cadbbce9ed30d1c7b959517bc49 # v2.12.2
+      - uses: nodejs/web-team/actions/setup-environment@4fe2167f55e4aa670f7f97da16490945bb061d51
         with:
-          egress-policy: audit
-
-      - name: Git Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
+          pnpm: true
+          use-version-file: true
           ref: ${{ env.BRANCH_NAME }}
           token: ${{ secrets.CROWDIN_GITHUB_BOT_TOKEN }}
 
@@ -91,19 +87,6 @@ jobs:
           restore-keys: |
             cache-lint-${{ hashFiles('pnpm-lock.yaml') }}-
             cache-lint-
-
-      - name: Set up pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
-
-      - name: Set up Node.js
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
-        with:
-          # We want to ensure that the Node.js version running here respects our supported versions
-          node-version-file: '.nvmrc'
-          cache: 'pnpm'
-
-      - name: Install packages
-        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         working-directory: apps/site
